--- a/test.yml
+++ b/test.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: localhost
+- hosts: all
   gather_facts: no
-  connection: local
+  #connection: local
   #vars:
   #  file: globals.yml
   #vars_files:
