--- a/test.yml
+++ b/test.yml
@@ -1,19 +1,15 @@
 ---
-- hosts: all
-  gather_facts: no
-  #connection: local
-  #vars:
-  #  file: globals.yml
-  #vars_files:
-  #  - "{{ file }}"
-  tasks:
-  - name: Get Ontapi version
-    na_ontap_gather_facts:
-      state: info
-      hostname: "{{ netapp_hostname }}"
-      username: "{{ netapp_username }}"
-      password: "{{ netapp_password }}"
-      https: true
-      validate_certs: false
-      #gather_subset: "aggregate info"
- 
+- name: Get Ontapi version
+  na_ontap_gather_facts:
+    state: info
+    hostname: "{{ netapp_hostname }}"
+    username: "{{ netapp_username }}"
+    password: "{{ netapp_password }}"
+    https: true
+    validate_certs: false
+    #gather_subset: "aggregate info"
+  register: facts
+
+- name: Display facts
+  debug: 
+    msg: "{{ facts }}" 
