--- a/new-ontap.yml
+++ b/new-ontap.yml
@@ -5,7 +5,7 @@
     url:  http://107.20.112.232:80/occm/api/auth/login
     method: POST
     body_format: json
-    body: { "email": "lrich00@gmail.com", "password": "Foobar00" }
+    body: 
     status_code: 204
   register: login
 
